# ESP-Agent-SDK

./: .env.example  .gitignore  Cargo copy.toml  Cargo.toml  LICENSE  Makefile  README.md  clippy.toml  deny.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: github_workflows_ci.yml
agent/: Cargo.toml  README.md
agent/src/: cli.rs  config.rs  discovery.rs  main.rs  registry.rs  scanner.rs
agent/src/output/: assessor.rs  attestation.rs  console.rs  full.rs  mod.rs  summary.rs
agent/src/signing/: backend.rs  mod.rs  types.rs
agent/src/signing/backends/: mod.rs  software.rs  tpm_windows.rs
config/: development.toml  production.toml  testing.toml
contract_kit/: Cargo.toml  README.md
contract_kit/docs/: computed_values.md  file_content.md  file_metadata.md  json_record.md  k8s.md  tcp_listener.md
contract_kit/src/: execution_api.rs  lib.rs
contract_kit/src/collectors/: command.rs  computed_values.rs  filesystem.rs  k8s_resource.rs  mod.rs  tcp_listener.rs
contract_kit/src/commands/: filesystem.rs  k8s.rs  mod.rs  tcp_listener.rs
contract_kit/src/contracts/: computed_values.rs  file_contracts.rs  json_contracts.rs  k8s_resource_contracts.rs  mod.rs  tcp_listener_contracts.rs
contract_kit/src/executors/: computed_values.rs  file_content.rs  file_metadata.rs  json_record.rs  k8s_resource.rs  mod.rs  tcp_listener.rs
esp/: test_file_content.esp  test_file_metadata.esp  test_tcp_listener.esp
guides/: Contract_Development_Guide.md  ESP_Language_Guide.md
