[workspace]
resolver = "2"
members = ["agent", "contract_kit"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Curtis Slone"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/scanset/ESP-Agent-SDK"
homepage = "https://github.com/scanset/ESP-Agent-SDK"

[workspace.dependencies]
# Shared dependencies across workspace
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# External ESP dependencies from GitHub (core ESP engine)
common = { git = "https://github.com/CurtisSlone/Endpoint-State-Policy", tag = "v1.0.3" }
compiler = { git = "https://github.com/CurtisSlone/Endpoint-State-Policy", tag = "v1.0.3" }
execution_engine = { git = "https://github.com/CurtisSlone/Endpoint-State-Policy", tag = "v1.0.3" }

# Local crates
contract_kit = { path = "contract_kit" }

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
debug-assertions = true
overflow-checks = true
incremental = true

[profile.release]
opt-level = 3
debug = false
split-debuginfo = "off"
debug-assertions = false
overflow-checks = false
lto = "thin"
incremental = false
codegen-units = 16
strip = "symbols"

[profile.release-with-debug]
inherits = "release"
debug = true
strip = "none"

[profile.test]
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true

# Security-focused build profile
[profile.security]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
