[package]
name = "contract_kit"
version.workspace = true
edition.workspace = true
authors = ["ESP Team"]
description = "ESP Contract Kit"
license.workspace = true


[dependencies]
# Depends on execution_engine (which transitively gets compiler)
execution_engine.workspace = true
common.workspace = true
compiler.workspace = true

# CLI-specific dependencies
clap = { version = "4.4", features = ["derive"] }
num_cpus = "1.16"
log = "0.4"
env_logger = "0.11"

# Any other dependencies needed for the binary
serde.workspace = true
serde_json.workspace = true
